--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "ows-btc-core-lib",
-  "main": "./ows-btc-core-lib.min.js",
+  "name": "ows-btccore-lib",
+  "main": "./ows-btccore.min.js",
   "version": "0.13.19",
   "homepage": "http://openwalletstack.com",
   "authors": [
@@ -13,6 +13,7 @@
   "keywords": [
     "bitcoin",
     "btccore",
+    "ows-btccore",
     "btc",
     "satoshi"
   ],
