--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "btccore-lib",
   "version": "0.0.1",
   "description": "A pure and powerful JavaScript Bitcoin library.",
-  "author": "Open Wallet Stack <dev@openwalletstack.com>",
   "main": "index.js",
   "scripts": {
     "lint": "gulp lint",
@@ -10,52 +9,6 @@
     "coverage": "gulp coverage",
     "build": "gulp"
   },
-  "contributors": [
-    {
-      "name": "Daniel Cousens",
-      "email": "bitcoin@dcousens.com"
-    },
-    {
-      "name": "Esteban Ordano",
-      "email": "eordano@gmail.com"
-    },
-    {
-      "name": "Gordon Hall",
-      "email": "gordon@bitpay.com"
-    },
-    {
-      "name": "Jeff Garzik",
-      "email": "jgarzik@bitpay.com"
-    },
-    {
-      "name": "Kyle Drake",
-      "email": "kyle@kyledrake.net"
-    },
-    {
-      "name": "Manuel Araoz",
-      "email": "manuelaraoz@gmail.com"
-    },
-    {
-      "name": "Matias Alejo Garcia",
-      "email": "ematiu@gmail.com"
-    },
-    {
-      "name": "Ryan X. Charles",
-      "email": "ryanxcharles@gmail.com"
-    },
-    {
-      "name": "Stefan Thomas",
-      "email": "moon@justmoon.net"
-    },
-    {
-      "name": "Stephen Pair",
-      "email": "stephen@bitpay.com"
-    },
-    {
-      "name": "Wei Lu",
-      "email": "luwei.here@gmail.com"
-    }
-  ],
   "keywords": [
     "bitcoin",
     "transaction",
@@ -88,7 +41,7 @@
     "lodash": "=3.10.1"
   },
   "devDependencies": {
-    "btccore-build": "owstack/btccore-build",
+    "btccore-build": "git://github.com/owstack/btccore-build",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
