--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "lodash": "=3.10.1"
   },
   "devDependencies": {
-    "btccore-build": "git://github.com/owstack/btccore-build",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
+    "ows-build": "git://github.com/owstack/ows-build",
     "sinon": "^1.13.0"
   },
   "license": "MIT"
