Use https protocol for dependencies

--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
     "lodash": "^4.17.4",
-    "ows-common": "git://github.com/owstack/ows-common"
+    "ows-common": "https://github.com/owstack/ows-common"
   },
   "devDependencies": {
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
-    "ows-build": "git://github.com/owstack/ows-build",
+    "ows-build": "https://github.com/owstack/ows-build",
     "sinon": "^1.13.0"
   },
   "license": "MIT"
