--- a/.jsdoc.conf
+++ b/.jsdoc.conf
@@ -23,7 +23,7 @@
     "lenient": true
 },
 "templates": {
-    "systemName": "btccore",
+    "systemName": "btc",
     "copyright": "",
     "navType": "vertical",
     "theme": "journal",
