--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "btccore-lib",
+  "name": "btc-lib",
   "version": "0.0.1",
   "description": "A pure and powerful JavaScript Bitcoin library.",
   "main": "index.js",
@@ -11,6 +11,7 @@
   },
   "keywords": [
     "bitcoin",
+    "btc",
     "transaction",
     "address",
     "p2p",
@@ -27,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/owstack/btccore-lib.git"
+    "url": "https://github.com/owstack/btc-lib.git"
   },
   "browser": {
     "request": "browser-request"
